--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,21 @@ spring:
             scope:
               - email
               - profile
+
+          naver:
+            client-id: M5iNojAi_8IBuMd2rt2w
+            client-secret: gRvypcEHYC
+            scope:
+              - email
+              - name
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response # 회원정보를 json으로 받는데, response라는 키값으로 네이버가 리턴해줌
+
